--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div id="shim"></div>
 <div id="content">
-	<h1 class="logo">GoBees</h1>
+	<h1 class="logo"><img src="https://cloud.githubusercontent.com/assets/6546265/19186791/3e4ee522-8c88-11e6-8074-a4c9219871fc.png"/></h1>
 	<p class="info">Our website is coming soon.<br/>
 		<span>In the mean time connect with us with the information below</span>
 	</p>
