Add Google Play link #96

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>GoBees | Monitorización del estado de una colmena</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,20 +46,20 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">GoBees</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#download">Download</a>
+                    <a class="page-scroll" href="#download">Descargar</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#features">Features</a>
+                    <a class="page-scroll" href="#features">Características</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -74,9 +74,8 @@
             <div class="col-sm-7">
                 <div class="header-content">
                     <div class="header-content-inner">
-                        <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app,
-                            or anything else!</h1>
-                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
+                        <h1>Monitoriza la actividad de tus colmenas con la cámara de un smartphone.</h1>
+                        <a href="#download" class="btn btn-outline btn-xl page-scroll">Descargar!</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +85,7 @@
                         <div class="device">
                             <div class="screen">
                                 <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                                <img src="img/main-screen.png" class="img-responsive" alt="">
                             </div>
                             <div class="button">
                                 <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -103,121 +102,122 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                <p>Our app is available on any mobile device! Download now to get started!</p>
+                <h2 class="section-heading">Descubre todo lo que GoBees puede hacer por tus colmenas!</h2>
+                <p>Puedes descargar la aplicación desde:</p>
                 <div class="badges">
-                    <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                    <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                    <a class="badge-link" href="https://play.google.com/store/apps/details?id=com.davidmiguel.gobees">
+                        <img src="img/google-play-badge.svg" alt="">
+                    </a>    
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section id="features" class="features">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="section-heading">
-                    <h2>Unlimited Features, Unlimited Fun</h2>
-                    <p class="text-muted">Check out what you can do with this app theme!</p>
-                    <hr>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="device-container">
-                    <div class="device-mockup iphone6_plus portrait white">
-                        <div class="device">
-                            <div class="screen">
-                                <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""></div>
-                            <div class="button">
-                                <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="feature-item">
-                                <i class="icon-screen-smartphone text-primary"></i>
-                                <h3>Device Mockups</h3>
-                                <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="feature-item">
-                                <i class="icon-camera text-primary"></i>
-                                <h3>Flexible Use</h3>
-                                <p class="text-muted">Put an image, video, animation, or anything else in the
-                                    screen!</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="feature-item">
-                                <i class="icon-present text-primary"></i>
-                                <h3>Free to Use</h3>
-                                <p class="text-muted">As always, this theme is free to download and use for any
-                                    purpose!</p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="feature-item">
-                                <i class="icon-lock-open text-primary"></i>
-                                <h3>Open Source</h3>
-                                <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<!--<section id="features" class="features">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-lg-12 text-center">-->
+                <!--<div class="section-heading">-->
+                    <!--<h2>Unlimited Features, Unlimited Fun</h2>-->
+                    <!--<p class="text-muted">Check out what you can do with this app theme!</p>-->
+                    <!--<hr>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-4">-->
+                <!--<div class="device-container">-->
+                    <!--<div class="device-mockup iphone6_plus portrait white">-->
+                        <!--<div class="device">-->
+                            <!--<div class="screen">-->
+                                <!--&lt;!&ndash; Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! &ndash;&gt;-->
+                                <!--<img src="img/demo-screen-1.jpg" class="img-responsive" alt=""></div>-->
+                            <!--<div class="button">-->
+                                <!--&lt;!&ndash; You can hook the "home button" to some JavaScript events or just remove it &ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-8">-->
+                <!--<div class="container-fluid">-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-md-6">-->
+                            <!--<div class="feature-item">-->
+                                <!--<i class="icon-screen-smartphone text-primary"></i>-->
+                                <!--<h3>Device Mockups</h3>-->
+                                <!--<p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-6">-->
+                            <!--<div class="feature-item">-->
+                                <!--<i class="icon-camera text-primary"></i>-->
+                                <!--<h3>Flexible Use</h3>-->
+                                <!--<p class="text-muted">Put an image, video, animation, or anything else in the-->
+                                    <!--screen!</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-md-6">-->
+                            <!--<div class="feature-item">-->
+                                <!--<i class="icon-present text-primary"></i>-->
+                                <!--<h3>Free to Use</h3>-->
+                                <!--<p class="text-muted">As always, this theme is free to download and use for any-->
+                                    <!--purpose!</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="col-md-6">-->
+                            <!--<div class="feature-item">-->
+                                <!--<i class="icon-lock-open text-primary"></i>-->
+                                <!--<h3>Open Source</h3>-->
+                                <!--<p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 
-<section class="cta">
-    <div class="cta-content">
-        <div class="container">
-            <h2>Stop waiting.<br>Start building.</h2>
-            <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-        </div>
-    </div>
-    <div class="overlay"></div>
-</section>
+<!--<section class="cta">-->
+    <!--<div class="cta-content">-->
+        <!--<div class="container">-->
+            <!--<h2>Stop waiting.<br>Start building.</h2>-->
+            <!--<a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="overlay"></div>-->
+<!--</section>-->
 
-<section id="contact" class="contact bg-primary">
-    <div class="container">
-        <h2>We <i class="fa fa-heart"></i> new friends!</h2>
-        <ul class="list-inline list-social">
-            <li class="social-twitter">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li class="social-facebook">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li class="social-google-plus">
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-            </li>
-        </ul>
-    </div>
-</section>
+<!--<section id="contact" class="contact bg-primary">-->
+    <!--<div class="container">-->
+        <!--<h2>We <i class="fa fa-heart"></i> new friends!</h2>-->
+        <!--<ul class="list-inline list-social">-->
+            <!--<li class="social-twitter">-->
+                <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+            <!--</li>-->
+            <!--<li class="social-facebook">-->
+                <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+            <!--</li>-->
+            <!--<li class="social-google-plus">-->
+                <!--<a href="#"><i class="fa fa-google-plus"></i></a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</section>-->
 
 <footer>
     <div class="container">
-        <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
+        <p>&copy; 2017 GoBees. Basado en Start Bootstrap.</p>
         <ul class="list-inline">
             <li>
-                <a href="#">Privacy</a>
+                <a href="#">Privacidad</a>
             </li>
             <li>
-                <a href="#">Terms</a>
+                <a href="#">Legal</a>
             </li>
             <li>
                 <a href="#">FAQ</a>
