--- a/help/index.html
+++ b/help/index.html
@@ -41,7 +41,7 @@
                     <a href="http://gobees.io/help/videos/generar-colmenar-prueba" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
                     
@@ -74,7 +74,7 @@
                     <a href="http://gobees.io/help/videos/anadir-colmenar" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -119,7 +119,7 @@
                     <a href="http://gobees.io/help/videos/editar-colmenar" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -156,7 +156,7 @@
                     <a href="http://gobees.io/help/videos/eliminar-colmenar" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -193,7 +193,7 @@
                     <a href="http://gobees.io/help/videos/consultar-info-meteo-colmenar" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -246,7 +246,7 @@
                     <a href="http://gobees.io/help/videos/ver-colmenar-mapa" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -279,7 +279,7 @@
                     <a href="http://gobees.io/help/videos/anadir-colmena" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -312,7 +312,7 @@
                     <a href="http://gobees.io/help/videos/editar-colmena" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -349,7 +349,7 @@
                     <a href="http://gobees.io/help/videos/eliminar-colmena" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -387,7 +387,7 @@
                     <a href="http://gobees.io/help/videos/monitorizacion-act-vuelo" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -484,7 +484,7 @@
                     <a href="http://gobees.io/help/videos/eliminar-grabacion" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -520,7 +520,7 @@
                     <a href="http://gobees.io/help/videos/eliminar-datos" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -555,7 +555,7 @@
                     <a href="http://gobees.io/help/videos/acerca-gobees" class="uri">
                         <p class="video">
                             <img width="100px"
-                                 src="http://gobees.io/images/video.png">
+                                 src="http://gobees.io/img/video.png">
                         </p>
                     </a>
 
@@ -582,5 +582,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
+<!-- Google Analytics -->
+<script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-91162316-1','auto');ga('send','pageview');
+</script>        
 </body>
 </html>
