--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Abrir menú</span> Menú <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Go<b>Bees</b></a>
+            <a class="navbar-brand page-scroll" href="/">Go<b>Bees</b></a>
         </div>
 
         <!-- Menu -->
@@ -64,10 +64,10 @@
                     <a href="/index.html#download">Descargar</a>
                 </li>
                 <li>
-                    <a href="/index.html">Características</a>
+                    <a href="/index.html#features">Características</a>
                 </li>
                 <li>
-                    <a href="/index.html">Contacto</a>
+                    <a href="/index.html#contact">Contacto</a>
                 </li>
                 <li>
                     <a href="/help">Ayuda</a>
