Add docs link #96

--- a/legal.html
+++ b/legal.html
@@ -163,6 +163,9 @@
             <li>
                 <a href="/help">Ayuda</a>
             </li>
+            <li>
+                <a href="http://go-bees.readthedocs.io/">Docs</a>
+            </li>
         </ul>
     </div>
 </footer>
