--- a/privacy.html
+++ b/privacy.html
@@ -202,6 +202,9 @@
             <li>
                 <a href="/help">Ayuda</a>
             </li>
+            <li>
+                <a href="http://go-bees.readthedocs.io/">Docs</a>
+            </li>
         </ul>
     </div>
 </footer>
