--- a/index.html
+++ b/index.html
@@ -252,6 +252,9 @@
             <li>
                 <a href="http://go-bees.readthedocs.io/">Docs</a>
             </li>
+            <li>
+                <a href="https://drive.google.com/drive/folders/0B2aEyRV9M0lJdzgwTURRM0ZCWGc?usp=sharing">Media Kit</a>
+            </li>
         </ul>
     </div>
 </footer>
